--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,6 +6,7 @@
       "use": "@vercel/node"
     }
   ],
+  "rewrites": [{ "source": "/contollers(.*)", "destination": "/contollers" }],
   "routes": [
     {
       "src": "/(.*)"
