--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [{ "source": "/contollers(.*)", "destination": "/contollers" }],
-  "routes": [
-    {
-      "src": "/(.*)"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
